--- a/index.html
+++ b/index.html
@@ -7,8 +7,40 @@
   <title>Tic Tac Toe</title>
   <link rel="stylesheet" href="./css/style.css">
   <script src="app.js" defer></script>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+  </style>
 </head>
 <body>
-  
+  <header>
+    <h1>Tic Tac Toe</h1>
+  </header>
+
+  <main>
+    <div class="info">
+      Player X turn
+    </div>
+
+    <div class="boardWrapper">
+      <div class="tile" id="0">X</div>
+      <div class="tile" id="1">X</div>
+      <div class="tile" id="2">O</div>
+
+      <div class="tile" id="3">O</div>
+      <div class="tile" id="4">X</div>
+      <div class="tile" id="5">X</div>
+
+      <div class="tile" id="6">X</div>
+      <div class="tile" id="7">O</div>
+      <div class="tile" id="8">O</div>
+    </div>
+
+    <button class="reset">Reset</button>
+
+  </main>
+
+  <footer>
+    <p>Built by <a href="https://github.com/Bladesheng">Bladesheng</a></p>
+  </footer>
 </body>
 </html>
