--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@
 
   <main>
     <div class="info">
-      Player X turn
+      Player X's turn
     </div>
 
     <div class="boardWrapper">
-      <div class="tile" id="0">X</div>
-      <div class="tile" id="1">X</div>
-      <div class="tile" id="2">O</div>
+      <div class="tile" id="0"></div>
+      <div class="tile" id="1"></div>
+      <div class="tile" id="2"></div>
 
-      <div class="tile" id="3">O</div>
-      <div class="tile" id="4">X</div>
-      <div class="tile" id="5">X</div>
+      <div class="tile" id="3"></div>
+      <div class="tile" id="4"></div>
+      <div class="tile" id="5"></div>
 
-      <div class="tile" id="6">X</div>
-      <div class="tile" id="7">O</div>
-      <div class="tile" id="8">O</div>
+      <div class="tile" id="6"></div>
+      <div class="tile" id="7"></div>
+      <div class="tile" id="8"></div>
     </div>
 
     <button class="reset">Reset</button>
