Add custom browser icon

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
   </style>
+  <link rel="icon" href="./favicon.ico">
 </head>
 <body>
   <header>
@@ -41,6 +42,7 @@
 
   <footer>
     <p>Built by <a href="https://github.com/Bladesheng">Bladesheng</a></p>
+    <p>Tic tac toe icon created by <a href="https://www.flaticon.com/authors/freepik">Freepik - Flaticon</a></p>
   </footer>
 </body>
 </html>
